# ADC-platform

./: .env.example  .gitignore  .mcp.json  .npmignore  ARCHITECTURE.md  CLAUDE.md  README.md  eslint.config.js  globals.d.ts  package-lock.json  package.json  sonar-project.properties  temp-ui  tsconfig.base.json  tsconfig.json
.claude/: cli-tools.md
.claude/parts/: providers.md  services.md  ui-system.md
.github/: SECURITY.md  copilot-instructions.md
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  uifederation_architecture.md
docs/: project-manager-plan.md  puertos.md
docs/auth/: discord.md
scripts/: cleanup-processes.sh  copy-config.mjs  create-app.mjs  create-middleware.mjs  create-preset.mjs  create-provider.mjs  create-service.mjs  create-utility.mjs  find-large-files.sh  generate-backend-security-matrix.mjs  generate-react-jsx.mjs  recursive-typecheck.sh
scripts/security-matrix/: ast-utils.mjs  collect-clients.mjs  collect-endpoints.mjs  format-matrix.mjs  fs.mjs
src/: index.ts  kernel.ts
src/apps/: BaseApp.ts
src/common/: BaseModule.ts
src/config/: logger.ts
src/interfaces/: IApp.ts  IKernel.ts  ILogger.ts  IMIddleware.ts  IModule.ts  IPreset.ts  IProvider.ts
src/loaders/: IModuleLoader.ts  LoaderManager.ts  ModuleLoader.ts
src/middlewares/: BaseMiddleware.ts
src/presets/: BasePreset.ts
src/providers/: BaseProvider.ts
src/providers/files/file-storage/1.0.0-cpp/: CMakeLists.txt  config.json  index.cpp
(+871 files in other folders)
